# nimiapp-tester

./: .gitignore  ADMISSION.md  AGENTS.md  LICENSE  README.md  SECURITY.md  dev-preview.html  index.html  nimi.app.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
.claude/: launch.json
.github/workflows/: ci.yml
.nimi/admission/: build-profile.yaml  submission.yaml
.nimi/app-scaffold/: intent.json  lock.json
.nimi/config/: audit-execution-artifacts.yaml  bootstrap.yaml  external-execution-artifacts.yaml  host-adapter.yaml  host-profile.yaml  installer-evidence.yaml  skill-installer.yaml  skill-manifest.yaml  skills.yaml  spec-generation-inputs.yaml
.nimi/contracts/: acceptance.schema.yaml  admission-checklist.schema.yaml  audit-chunk.schema.yaml  audit-closeout.schema.yaml  audit-finding.schema.yaml  audit-ledger.schema.yaml  audit-plan.schema.yaml  audit-remediation-map.schema.yaml  audit-rerun.schema.yaml  audit-sweep-result.yaml  authority-convergence-audit.schema.yaml  closeout.schema.yaml  decision-review.schema.yaml  doc-spec-audit-result.yaml  domain-admission.schema.yaml  execution-packet.schema.yaml  external-host-compatibility.yaml  forbidden-shortcuts.catalog.yaml  (+29 more)
scripts/: dev-shell.mjs  local-audit.mjs  pack.mjs  validate.mjs
src/: dev-preview.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  tester_storage.rs  world_tour.rs
test/: scaffold-boundary.test.mjs  tester-artifact-persistence.test.mjs  tester-contract.test.mjs  tester-preferences.test.mjs  world-tour-contract.test.mjs
(+76 files in other folders)
