[package]
name = "nimiapp-tester-shell"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
nimi-shell-tauri = "0.1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }
